--- a/start/package.json
+++ b/start/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.5",
+    "csv-parse": "^4.14.1",
+    "csv-parser": "^3.0.0",
     "debug": "~4.1.1",
     "express": "~4.17.1",
     "gm": "^1.23.1",
